fixed the wrapping issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,7 +244,7 @@ footer {
     margin-left: 280px;
     margin-right: 10%;
     padding: 14px;
-    top: -200px;
+    /* top: -200px; */
 }
 
 .body-text h2 {
